--- a/package.json
+++ b/package.json
@@ -5,10 +5,22 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.6",
+    "@babel/node": "^7.8.4",
+    "@babel/preset-env": "^7.8.6",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^3.21.3",
     "mongoose": "^5.9.3",
+    "morgan": "^1.9.1",
     "nodemon": "^2.0.2"
+  },
+  "scripts": {
+    "server": "nodemon --exec babel-node src/init.js --delay 2"
   }
 }
