--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "@babel/preset-env": "^7.8.6",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "helmet": "^3.21.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoku": "^1.3.0",
     "mongoose": "^5.9.3",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
