--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1"
   },
   "scripts": {
