--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoku": "^1.3.0",
     "mongoose": "^5.9.3",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.4.6",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
