--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/core": "^7.8.6",
     "@babel/node": "^7.8.4",
     "@babel/preset-env": "^7.8.6",
+    "aws-sdk": "^2.656.0",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
@@ -22,6 +23,8 @@
     "mongoku": "^1.3.0",
     "mongoose": "^5.9.3",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "nodemailer": "^6.4.6",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
