--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "google-auth-library": "^6.0.0",
     "helmet": "^3.21.3",
     "jsonwebtoken": "^8.5.1",
     "mongoku": "^1.3.0",
@@ -29,7 +30,8 @@
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.0.1"
+    "passport-local-mongoose": "^6.0.1",
+    "passport-naver": "^1.0.6"
   },
   "scripts": {
     "server": "nodemon --exec babel-node src/init.js --delay 2"
