--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "google-auth-library": "^6.0.0",
     "helmet": "^3.21.3",
     "jsonwebtoken": "^8.5.1",
+    "minimist": "^1.2.5",
     "mongoku": "^1.3.0",
     "mongoose": "^5.9.3",
     "morgan": "^1.9.1",
