--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "@babel/cli": "^7.8.4",
+    "@babel/compat-data": "^7.9.0",
     "@babel/core": "^7.8.6",
     "@babel/node": "^7.8.4",
     "@babel/polyfill": "^7.8.7",
@@ -32,8 +33,7 @@
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.0.1",
-    "passport-naver": "^1.0.6"
+    "passport-local-mongoose": "^6.0.1"
   },
   "scripts": {
     "dev:server": "nodemon --exec babel-node src/init.js --delay 2",
