--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.0.1"
+    "passport-local-mongoose": "^6.0.1",
+    "webpack": "^4.43.0"
   },
   "scripts": {
     "dev:server": "nodemon --exec babel-node src/init.js --delay 2",
